--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ img {
     height: 100%;
     background-color: var(--white-color);
     z-index: 900;
+    overflow-y: auto;
 
     transform: translateX(100%);
     transition: var(--transition-dur-and-func);
